--- a/css/estilosPersonal.css
+++ b/css/estilosPersonal.css
@@ -1,5 +1,6 @@
 body {
-  background-color: gray;
+  background-image: url(/img/background3.jpeg);
+  background-size: cover;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 h1 {
@@ -21,4 +22,11 @@ fieldset {
 legend {
   background-color: cornflowerblue;
   color: white;
+}
+.yt {
+  list-style-image: url(/img/youtube.png);
+}
+.yt:visited {
+  list-style-image: url(/img/youtube.png);
+  color: blue;
 }
