--- a/css/estilos.css
+++ b/css/estilos.css
@@ -100,7 +100,7 @@ h1.tituloPersonal {
   padding-right: 20px;
   text-align: center;
   text-decoration: underline;
-  text-shadow: 10px;
+  text-justify: 10px;
   text-transform: uppercase;
   font-weight: bolder;
   font-size: large;
